This is a test commit by jose

--- a/Exercise 1.ipynb
+++ b/Exercise 1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5581d82d",
    "metadata": {},
    "outputs": [
@@ -50,8 +50,8 @@
     "\n",
     "# Constants\n",
     "e = 1.602e-19  # Elementary charge\n",
-    "mp = 1.673e-27  # Proton mass (kg)\n",
-    "m = 16 * mp  # O+ mass (kg)\n",
+    "mp = 1.673e-27  # Proton mass [kg]\n",
+    "m = 16 * mp  # O+ mass [kg]\n",
     "q = e  # Charge (C)\n",
     "Ex = 0.1  # Electric field [V/m]\n",
     "\n",
